[tool.poetry]
name = "PromptEngineering"
version = "1.0.0"
description = ""
authors = ["Michael Verdegaal"]
readme = "README.md"
packages = [{include = "main"}]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pre-commit = "^3.7.1"
jupyterlab = "^4.2.0"
notebook = "^7.1.3"
transformers = "^4.41.1"
torch = {version = "^2.3.0+cu121", source = "pytorch_gpu"}
torchvision = {version = "^0.18.0+cu121", source = "pytorch_gpu"}
accelerate = "^0.30.1"


[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.black]
line-length = 100
extend-exclude = '/^[^.]+$|\.(?!(py)$)([^.]+$)/'

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
